Create Log Page + Profile Page + Bug Fixes

--- a/code/js/front-end/src/app/invite-list/invite-list.component.html
+++ b/code/js/front-end/src/app/invite-list/invite-list.component.html
@@ -2,7 +2,7 @@
   <button (click)="onBackCall()" class="small-button">
     <mat-icon class="small-icon">arrow_back</mat-icon>
   </button>
-  <h2 class="title">Introduza o Email e a Role das pessoas que pertende convidar</h2>
+  <h2 class="title">Convites</h2>
 </div>
 <div>
   <input type="text" placeholder="Procurar Verificação" [(ngModel)]="inputValue"
