--- a/code/js/front-end/src/app/create-log-entry/create-log-entry.component.html
+++ b/code/js/front-end/src/app/create-log-entry/create-log-entry.component.html
@@ -1,51 +1,55 @@
-<div class="header">
-  <button (click)="onBackCall()" class="small-button">
-    <mat-icon class="small-icon">arrow_back</mat-icon>
-  </button>
-  <h2 class="title">Criar Registo</h2>
-</div>
-
-<div class="content">
-  <div class="left-section">
-    <h3>Insira os detalhes do registo.</h3>
-    <form (ngSubmit)="onSubmit()" class="example-form">
-      <mat-form-field>
-        <mat-label>Título</mat-label>
-        <input matInput type="text" name="title" [(ngModel)]="title">
-      </mat-form-field>
-      <br>
-      <mat-form-field>
-        <mat-label>Adicione uma descrição</mat-label>
-        <textarea matInput [(ngModel)]="description" name="description" required></textarea>
-      </mat-form-field>
-      <br>
-      <input type="file" (change)="onFileUpload($event)" #fileInput style="display:none">
-      <button type="button" class="add-button" (click)="fileInput.click()">Adicionar Ficheiro</button>
-      <button mat-flat-button color="accent" class="submit-button" type="submit">Submeter Registo</button>
-    </form>
+<div class="container">
+  <div class="header">
+    <button mat-button (click)="onBackCall()" class="small-button">
+      <mat-icon class="small-icon">arrow_back</mat-icon>
+      Voltar
+    </button>
   </div>
-
-  <div class="right-section">
-    <h3 style="text-align: center">Ficheiros Adicionados</h3>
-    <div class="table-container">
-      <table mat-table [dataSource]="filesArray()" class="table">
-        <ng-container matColumnDef="files">
-          <th mat-header-cell *matHeaderCellDef> Files</th>
-          <td mat-cell *matCellDef="let element"> {{ element.fileName }}</td>
-        </ng-container>
-
-        <ng-container matColumnDef="delete">
-          <th mat-header-cell *matHeaderCellDef> Remover</th>
-          <td mat-cell *matCellDef="let element">
-            <button class="remove-button" mat-fab (click)="onRemoveFile(element.key)">
-              <mat-icon>delete</mat-icon>
-            </button>
+  <div class="content" >
+    <h1 class="title">Título</h1>
+    <textarea id="title" name="title" [(ngModel)]="title" (ngModelChange)="title = $event"></textarea>
+    <mat-divider></mat-divider>
+    <div class="description">
+      <h2>Descrição</h2>
+      <textarea  id="description" name="description" [(ngModel)]="description" (ngModelChange)="description = $event"></textarea>
+    </div>
+    <mat-divider></mat-divider>
+    <div class="files">
+      <h2>Ficheiros</h2>
+      <input type="file" (change)="onFileUpload($event)" #fileInput style="display:none">
+      <button  type="button" class="add-button" (click)="openFileInput()">Adicionar Ficheiro</button>
+      <button *ngIf="!selection.isEmpty()" (click)="deleteFiles()">Apagar Ficheiros</button>
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+        <ng-container matColumnDef="select">
+          <th mat-header-cell *matHeaderCellDef>
+            <mat-checkbox *ngIf="files.size > 1" (change)="$event ? toggleAllRows() : null"
+                          [checked]="selection.hasValue() && isAllSelected()"
+                          [indeterminate]="selection.hasValue() && !isAllSelected()"
+                          [aria-label]="checkboxLabel()">
+            </mat-checkbox>
+          </th>
+          <td mat-cell *matCellDef="let row">
+            <mat-checkbox (click)="$event.stopPropagation()"
+                          (change)="$event ? selection.toggle(row) : null"
+                          [checked]="selection.isSelected(row)"
+                          [aria-label]="checkboxLabel(row)">
+            </mat-checkbox>
           </td>
         </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef> Name</th>
+          <td mat-cell *matCellDef="let element"> {{ element.fileName }}</td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"
+            (click)="selection.toggle(row)">
+        </tr>
       </table>
+      <button class="submit" (click)="onSubmit()">Criar</button>
+      <div style="height: 20px;"></div>
     </div>
   </div>
 </div>
+
+
+
