--- a/code/js/front-end/src/app/work/work.component.html
+++ b/code/js/front-end/src/app/work/work.component.html
@@ -19,5 +19,5 @@
     [workListing]="workListing">
   </app-work-listings>
 </section>
-<mat-paginator #paginator [length]="workElements" pageSize="6" aria-label="Select page" [hidePageSize]="true"
+<mat-paginator *ngIf="workElements > 6" #paginator [length]="workElements" pageSize="6" aria-label="Select page" [hidePageSize]="true"
                (page)="onPageChange($event)"></mat-paginator>
