--- a/code/js/front-end/src/app/work-details/work-details.component.css
+++ b/code/js/front-end/src/app/work-details/work-details.component.css
@@ -152,6 +152,13 @@
   justify-content: space-between;
 }
 
+.top-bar-permission {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 10px;
+}
+
 form {
   flex-grow: 1; /* Allows the form to take up all available space */
 }
@@ -317,7 +324,6 @@ mat-list {
 }
 
 mat-list-item {
-  border-bottom: 1px solid lightgrey;
   display: flex;
   align-items: center;
   justify-content: center;
