Member Profile Page Implemented + My Logs Page Implemented + File Singular Menu Added to table + bug fixes

--- a/code/js/front-end/src/app/app.component.css
+++ b/code/js/front-end/src/app/app.component.css
@@ -6,6 +6,8 @@
 }
 
 .top-bar {
+  padding-bottom: 5px;
+  padding-top: 5px;
   display: flex;
   justify-content: space-between; /* Align items on the toolbar */
   background-color: #11113D;
