--- a/code/js/front-end/src/app/log-entry-details/log-entry-details.component.html
+++ b/code/js/front-end/src/app/log-entry-details/log-entry-details.component.html
@@ -1,17 +1,11 @@
 <div class="container">
   <div class="header">
     <button mat-button (click)="onBackCall()" class="small-button">
-      <mat-icon class="small-icon">arrow_back</mat-icon>
+      <mat-icon class="small-icon important-icon">arrow_back</mat-icon>
       Voltar
     </button>
   </div>
   <div class="content" *ngIf="log">
-    <h1 *ngIf="!editTitle" class="title">{{ log.title }}
-      <mat-icon *ngIf="isEditable() && !editTitle" (click)="toggleEditTitle()">edit</mat-icon>
-    </h1>
-    <textarea *ngIf="editTitle" id="newTitle" name="newTitle" [(ngModel)]="newTitle" (ngModelChange)="onChangeValues($event, 'Title')"></textarea>
-    <button *ngIf="editTitle" (click)="onEditLogCall('Title')">Submit</button>
-    <button *ngIf="editTitle" (click)="toggleEditTitle(true)">Cancelar</button>
     <div class="author">Autor: {{ log.author.name }}</div>
     <div class="dates">
       <div>Data de Criação: {{ log.createdAt }}</div>
@@ -19,9 +13,9 @@
     </div>
     <mat-divider></mat-divider>
     <div class="description">
-      <h2>Descrição
+      <h3>Observação
         <mat-icon *ngIf="isEditable() && !editDescription" (click)="toggleEditDescription()">edit</mat-icon>
-      </h2>
+      </h3>
       <p *ngIf="!editDescription">{{ log.content }}</p>
       <textarea *ngIf="editDescription" id="newContent" name="newContent" [(ngModel)]="newContent" (ngModelChange)="onChangeValues($event, 'Content')"></textarea>
       <button *ngIf="editDescription" (click)="onEditLogCall('Content')">Submit</button>
@@ -29,7 +23,7 @@
     </div>
     <mat-divider></mat-divider>
     <div class="files">
-      <h2>Ficheiros</h2>
+      <h3>Anexos</h3>
       <input type="file" (change)="onFileUpload($event)" #fileInput style="display:none">
       <button *ngIf="log.editable" type="button" class="add-button" (click)="openFileInput()">Adicionar Ficheiro</button>
       <button *ngIf="!selection.isEmpty()" (click)="downloadFiles()">Transferir ficheiros</button>
@@ -51,26 +45,36 @@
             </mat-checkbox>
           </td>
         </ng-container>
-
         <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef> Name</th>
           <td mat-cell *matCellDef="let element"> {{ element.fileName }}</td>
         </ng-container>
-
         <ng-container matColumnDef="uploadDate">
           <th mat-header-cell *matHeaderCellDef>Data de Carregamento</th>
-          <td mat-cell *matCellDef="let element"> {{ element.uploadDate }}</td>
+          <td mat-cell *matCellDef="let element">
+            <div class="file-info">
+              {{ representFileDate(element.uploadDate) }}
+              <button mat-icon-button class="file-menu-button" [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+                <mat-icon>more_vert</mat-icon>
+              </button>
+              <mat-menu #menu="matMenu" xPosition="before">
+                <button mat-menu-item (click)="onDownloadFile(element.id)">
+                  <mat-icon>download</mat-icon>
+                  <span>Transferir Ficheiro</span>
+                </button>
+                <button mat-menu-item (click)="onDeleteFile(element.id)">
+                  <mat-icon>delete</mat-icon>
+                  <span>Remover Ficheiro</span>
+                </button>
+              </mat-menu>
+            </div>
+          </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"
-            (click)="selection.toggle(row)">
-        </tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
       <div style="height: 20px;"></div>
     </div>
   </div>
 </div>
-
-
-
