--- a/code/js/front-end/src/app/profile/profile.component.css
+++ b/code/js/front-end/src/app/profile/profile.component.css
@@ -172,6 +172,7 @@
 .profile-picture {
   background-size: cover;
   background-position: center;
+  background-color: transparent;
   width: 100px;
   height: 100px;
   border-radius: 50%;
