--- a/code/js/front-end/src/app/work-invite/work-invite.component.css
+++ b/code/js/front-end/src/app/work-invite/work-invite.component.css
@@ -1,23 +1,32 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 20px;
+}
+
 .header {
   display: flex;
   align-items: center;
   margin-bottom: 20px;
-  height: 7%;
 }
 
 .small-button {
-  width: 2%;
-  height: auto;
-  margin: 10px;
-  background-color: transparent;
-  border: none;
+  display: flex;
+  align-items: center;
+  margin-right: 10px;
 }
 
 .small-icon {
-  font-size: 200%;
+  font-size: 30px ;
+  margin-right: 5px;
 }
 
-.container {
+.important-icon {
+  margin-right: 5px !important;
+}
+
+.content {
   height: calc(100vh - 100px);
   overflow-y: auto;
   display: flex;
