--- a/code/js/front-end/src/app/work-invite/work-invite.component.css
+++ b/code/js/front-end/src/app/work-invite/work-invite.component.css
@@ -18,7 +18,7 @@
 }
 
 .small-icon {
-  font-size: 30px ;
+  font-size: 30px;
   margin-right: 5px;
 }
 
@@ -27,19 +27,7 @@
 }
 
 .content {
-  height: calc(100vh - 100px);
-  overflow-y: auto;
-  display: flex;
-  flex-direction: column;
-}
-
-.form-container {
-  text-align: center;
-}
-
-.mat-form-field {
-  width: 45%;
-  margin-right: 10px;
+  width: 100%;
 }
 
 .table {
@@ -50,25 +38,12 @@
   overflow: auto;
 }
 
-.button-container {
-  text-align: center;
-}
-
-.button {
-  background-color: white;
-  color: black;
-}
-
-.button:hover {
-  background-color: #FF7A00;
-  color: white;
-}
-
 .add-button {
   height: auto;
   width: auto;
-  background-color: white;
-  color: black;
+  border: 1px solid #FF7A00;
+  background-color: #11113D;
+  color: #FF7A00;
 }
 
 .add-button:hover {
@@ -88,7 +63,57 @@
   color: white;
 }
 
-.mat-cell, .mat-header-cell {
+.submit-button {
+  height: auto;
+  width: auto;
+  background-color: white;
+  color: black;
+  margin-right: 20px;
+}
+
+.submit-button:hover {
+  background-color: green;
+  color: white;
+}
+
+.invites table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+.invites th, .invites td {
+  border: 1px solid #FF7A00;
+  padding: 8px;
   text-align: center;
-  vertical-align: middle;
+  width: 33.3% !important;
+  max-width: 33.3% !important;
+}
+
+.invites th {
+  background-color: #11113D;
+  color: #FF7A00;
+}
+
+.invites tr:nth-child(even) {
+  background-color: #f3f3f3;
+}
+
+.submit {
+  display: block; /* Adicione isso para assegurar que o margin auto funcione */
+  margin: 20px auto; /* Centraliza horizontalmente e adiciona margem vertical */
+  padding: 10px;
+  background-color: #11113D;
+  border-radius: 5px;
+  border: 2px solid #FF7A00;
+  color: #FF7A00;
+  user-select: none;
+  text-align: center; /* Centraliza o texto dentro do botão */
+}
+
+.submit:hover {
+  background-color: #FF7A00;
+  color: white;
+  cursor: pointer;
 }
