--- a/code/js/front-end/src/app/work-invite/work-invite.component.html
+++ b/code/js/front-end/src/app/work-invite/work-invite.component.html
@@ -5,67 +5,52 @@
       Voltar
     </button>
   </div>
-</div>
-<div class="content">
-  <h3>Convidar membros para a obra</h3>
-  <div class="form-container">
-    <mat-form-field>
-      <mat-label>Email</mat-label>
-      <input type="email" matInput [formControl]="emailFormControl" [errorStateMatcher]="matcher"
-             placeholder="Ex. pat@example.com">
-      <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
-        Email Inválido
-      </mat-error>
-      <mat-error *ngIf="emailFormControl.hasError('required')">
-        Introduzir um email é <strong>obrigatório</strong>
-      </mat-error>
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>Escolha um Papel</mat-label>
-      <mat-select [formControl]="roles" [errorStateMatcher]="matcher">
-        <mat-option value=""></mat-option>
-        <mat-option value="ESPECTADOR">Espectador</mat-option>
-        <mat-option value="MEMBRO">Membro</mat-option>
-        <mat-option value="ARQUITETURA">Arquitetura</mat-option>
-        <mat-option value="ESTABILIDADE">Estabilidade</mat-option>
-        <mat-option value="ELETRICIDADE">Eletricidade</mat-option>
-        <mat-option value="GÁS">Gás</mat-option>
-        <mat-option value="CANALIZAÇÃO">Canalização</mat-option>
-        <mat-option value="TELECOMUNICAÇÕES">Telecomunicações</mat-option>
-        <mat-option value="TERMICO">Térmico</mat-option>
-        <mat-option value="ACUSTICO">Acústico</mat-option>
-        <mat-option value="TRANSPORTES">Transportes</mat-option>
-      </mat-select>
-      <mat-error *ngIf="roles.hasError('required')">
-        Escolher um papel é <strong>obrigatório</strong>
-      </mat-error>
-    </mat-form-field>
-    <button class="add-button" mat-fab (click)="addInvite(email, role)">
-      <mat-icon>add</mat-icon>
-    </button>
-  </div>
-  <table *ngIf="invites.length > 0" mat-table [dataSource]="invites" class="table">
-    <ng-container matColumnDef="email">
-      <th class="mat-header-cell" *matHeaderCellDef> Email</th>
-      <td class="mat-cell" *matCellDef="let element"> {{ element.email }}</td>
-    </ng-container>
-    <ng-container matColumnDef="role">
-      <th class="mat-header-cell" *matHeaderCellDef> Papel</th>
-      <td class="mat-cell" *matCellDef="let element"> {{ element.role }}</td>
-    </ng-container>
-    <ng-container matColumnDef="delete">
-      <th class="mat-header-cell" *matHeaderCellDef> Remover</th>
-      <td class="mat-cell" *matCellDef="let element">
-        <button class="remove-button" mat-fab (click)="removeInvite(element.position)">
-          <mat-icon>delete</mat-icon>
-        </button>
-      </td>
-    </ng-container>
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+  <div class="content">
+    <div class="invites">
+      <h3>Convidar membros para a obra</h3>
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+        <ng-container matColumnDef="email">
+          <th mat-header-cell *matHeaderCellDef> Email</th>
+          <td mat-cell *matCellDef="let element">
+            <div *ngIf="element.submitted">{{ element.email }}</div>
+            <div *ngIf="!element.submitted">
+              <input type="text" id="email" name="email" [(ngModel)]="element.email">
+            </div>
+          </td>
+        </ng-container>
 
-  <div class="button-container">
-    <button class="button" mat-flat-button (click)="sendInvites()">Invite</button>
+        <ng-container matColumnDef="role">
+          <th mat-header-cell *matHeaderCellDef> Papel na Obra</th>
+          <td mat-cell *matCellDef="let element">
+            <div *ngIf="element.submitted">{{ element.role }}</div>
+            <div *ngIf="!element.submitted">
+              <select id="seletorOpcoes" [(ngModel)]="element.role">
+              <option *ngFor="let opcao of roles" [value]="opcao">{{ opcao }}</option>
+            </select>
+            </div>
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef>
+            <button class="add-button" mat-fab (click)="addRowInvite()">
+              <mat-icon>add</mat-icon>
+            </button>
+          </th>
+          <td mat-cell *matCellDef="let element">
+            <button *ngIf="!element.submitted" class="submit-button" mat-fab (click)="submitInvite(element.position)">
+              <span class="material-icons">check</span>
+            </button>
+            <button class="remove-button" mat-fab (click)="removeInvite(element.position)">
+              <mat-icon>delete</mat-icon>
+            </button>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+      <button *ngIf="invites.length > 0" class="submit" (click)="sendInvites()">Enviar Convites</button>
+    </div>
   </div>
 </div>
